use ProcessBuilder, since Runtime#exec lose env vars from os